    SAFE-marked objects. Patch from Jake.
 -- Added destroy_going_now configuration option. If enabled, a second
    @destroy request causes the object to be destroyed immediately.
    Added to provide compatibility with PennMUSH. Patch from Jake.

Bug Fixes:
~~~~~~~~~
 -- inet_addr() re-write to handle netmask of 255.255.255.255 and Berkeley
    a, a.b, and a.b.c numeric IP formats.
 -- article_rule wasn't parsed correctly, and art() always returned 'a'.
 -- @cboot would SIGSEGV on @cset/anon channels.
 -- Documented comtitle/{on,off}.
 -- Typo bug in RADIX_COMPRESSION build.
 -- Short version string contained 'Alpha' instead of 'Beta'.
 -- Several semaphores waiting on the same object/attr could be @notified
    out of order.
 -- Channel messages are considered OOC.
 -- Bug #662 - SIGSEGV in @dbck.
 -- Bug #618 - Logic in new_home enables being inside a garbage object.
 -- Bug #424 - Linking deposit refund. Patch from Jake.
 -- Bug #585 - Parent isn't cleared during @destroy process. Patch from Jake.
 -- Bug #765 - whispering to objects with ears should still be allowed.
 -- Document safer_passwords configuration option.
 -- Bug #602 - fun_ansi reaches backwards into the buffer.

Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Parser is faster in recognizing %-escapes.
 -- Parser function handling is improved with minimum and maximum range
    checking handled in the parser and not in each individual function.
 -- Database and hashtables use a different hash function which is easier
    for gcc to optimize and therefore, Unix distro should benefit.
    Actually, new hash function is faster than anything else I've found
    for all block sizes from 1-byte up.
 -- For string search with GREP and GREPI, added a Boyer-Moore-Horspool
    string search algorithm for speed.
 -- Perform one strip_ansi() call in do_decomp instead of several.

Cosmetic Changes:
~~~~~~~~~~~~~~~~

Miscellaneous:
~~~~~~~~~~~~~
 -- Added Manual in LaTeX format.